application/static/css/style.css
/* ... */
/* ------------------- LOG IN PAGE ------------------- */

.page {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 15px;
    box-sizing: border-box;
    margin: 0;
    padding: 25px;
    height: auto;
    width: clamp(200px, 100%, 50ch);
    text-align: left;
    color: var(--tertiary-color);
    background-color: var(--secondary-background-color);
    border: var(--primary-border);
    border-radius: 4px;
    box-shadow: var(--primary-shadow);
}

.page .header {
    font-family: sarabun-bold;
    font-size: 2rem;
    letter-spacing: 2px;
    margin: 0;
    width: 100%;
    text-align: left;
}

.page .sub-header {
    margin: 0;
    text-align: left;
    width: 100%;
}

.page form {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    width: 100%;
    gap: 15px;
    margin: 0;
    padding: 0;
    text-align: left;
}

.page form .button-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.page form .row {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    gap: 5px;
    width: 100%;
}

@media screen and (min-width: 720px) {
    .page form .row {
        flex-direction: row;
        align-items: center;
        gap: initial;
    }
}

.page input,
.page textarea {
    background-color: var(--tertiary-color);
    border: transparent 1px solid;
    -webkit-transition: all 200ms linear;
    -ms-transition: all 200ms linear;
    transition: all 200ms linear;
}

.page input:focus,
.page textarea:focus {
    outline: transparent;
    border: var(--secondary-color) 1px solid;
}

.page input {
    width: 25ch;
}

.page textarea {
    height: 20ch;
    width: 100%;
}

/* ------------------- CREATE AND EDIT BLOG POST ------------------- */
#create-blog-post-page,
#update-blog-post-page {
    width: clamp(200px, 100%, 800px);
}

#create-blog-post-page input,
#create-blog-post-page textarea,
#update-blog-post-page input,
#update-blog-post-page textarea {
    width: 100%;
}

#create-blog-post-page textarea,
#update-blog-post-page textarea {
    height: 40ch;
    width: 100%;
}

/* ------------------- BLOGGERS ------------------- */

a.featured-container {
    width: 100%;

    &:hover {
        filter: none !important;
    }
}

.featured {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    width: 100%;
    height: clamp(475px, 25vh, 700px);
    color: var(--tertiary-color);
    font-size: larger;
    box-sizing: border-box;
    padding: 15px 20px;
    margin-bottom: 14px;
    border-radius: 4px;
    background: var(--secondary-background-color);
    background: linear-gradient(
        110deg,
        rgb(4, 16, 32) 0%,
        rgb(0, 45, 94) 28%,
        rgb(0, 10, 15) 85%
    );
    /* background-image: linear-gradient(
        96deg,
        var(--quaternary-color) 7.63%,
        var(--primary-color) 37.94%,
        #00d2e5 65.23%,
        var(--secondary-color) 92.12%
    ); */
    box-shadow: var(--primary-shadow);
    transition: all 200ms linear;

    & * {
        padding: 0;
        margin: 0;
    }

    & > label {
        font-family: sarabun-bold;
        mix-blend-mode: color-dodge;
    }

    & > div {
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
        align-items: flex-start;
        gap: 14px;
        width: 100%;
    }

    & p {
        max-width: 150ch;
    }

    svg {
        height: 1.5em;
        fill: var(--tertiary-color);
        margin-bottom: -7px;
    }

    .prompt-area {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        align-items: center;
        gap: 10px;
        width: 100%;
    }

    .prompt {
        display: none;
        transition: all 200ms linear;
    }

    &:hover {
        -webkit-box-shadow: 0px 0px 12px 2px rgba(0, 172, 245, 1);
        -moz-box-shadow: 0px 0px 12px 2px rgba(0, 172, 245, 1);
        box-shadow: 0px 0px 12px 2px rgba(0, 172, 245, 1);

        .prompt {
            display: unset;
        }
    }
}

@media screen and (min-width: 720px) {
    .featured {
        height: clamp(300px, 25vh, 700px);
    }
}

.users {
    position: relative;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
    gap: 14px;
    height: 100%;
    width: 100%;
    padding: 0;
    margin: 0;
    list-style: none;
}

@media screen and (min-width: 1440px) {
    .users {
        grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
    }
}

.no-users {
    color: var(--tertiary-color);
    font-family: sarabun-light;
    font-size: 1.2rem;
    letter-spacing: 1.5px;
}

.users > li {
    position: relative;
    color: var(--tertiary-color);
    white-space: nowrap;
    text-overflow: ellipsis;
    box-sizing: border-box;
    padding: 15px 20px;
    border: var(--primary-border);
    border-radius: 4px;
    width: 100%;
    background-color: var(--secondary-background-color);
    box-shadow: var(--primary-shadow);
}

.users > li .bg-image {
    opacity: 0.65;
}

.users .about {
    max-width: 75ch;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.users .header {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
}

.avatar {
    height: 3.3rem;
    width: 3.3rem;
    border-radius: 150px;
}

.avatar.lg {
    height: 4.25rem;
    width: 4.25rem;
}

.metadata {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 15px;
    width: 100%;
    margin: 0;
    padding: 0;
    list-style: none;
}
/* ... */

